deploy/k8s/moon/palace/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: palace
  namespace: application
  labels:
    app: palace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: palace
  template:
    metadata:
      labels:
        app: palace
    spec:
      containers:
      - name: palace
        image: docker.cloudimages.asia/aidemoonio/palace:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8000
        - name: grpc
          containerPort: 9000
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 20
        volumeMounts:
        - name: palace-data
          mountPath: /data/conf/config.yaml
          subPath: config.yaml
      volumes:
      - name: palace-data
        configMap:
          name: palace-config
