deploy/k8s/moon/palace/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: palace
  namespace: application
  labels:
    app: palace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
  - secretName: moon
    hosts:
    - moon.aide-cloud.cn
  rules:
  - host: moon.aide-cloud.cn
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: palace
            port:
              number: 8000
